draggable set to false

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
     <section id="welcome-section">
         <div class="welcome_image">
-            <img src="https://i.ibb.co/xfMKsC6/backlit-structure-designify.png" alt="">
+            <img draggable="false" src="https://i.ibb.co/xfMKsC6/backlit-structure-designify.png" alt="">
         </div>
         <div class="titles">
             <div class="welcome_title">
