--- a/index.html
+++ b/index.html
@@ -18,9 +18,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://i.ibb.co/0nQk7p8/favicon.png" type="image/x-icon">
-    <title>Personal Portfolio Page</title>
     <link rel="preload" href="https://i.ibb.co/xfMKsC6/backlit-structure-designify.png" as="image">
     <link rel="preload" href="https://i.ibb.co/gvH2XGq/logo.png" as="image">
+
+    <!-- Primary Meta Tags -->
+    <title>Simple Portfolio - Made with HTML and CSS</title>
+    <meta name="title" content="Simple Portfolio - Made with HTML and CSS">
+    <meta name="description" content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fatinoortaki.netlify.app/">
+    <meta property="og:title" content="Simple Portfolio - Made with HTML and CSS">
+    <meta property="og:description"
+        content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://fatinoortaki.netlify.app/">
+    <meta property="twitter:title" content="Simple Portfolio - Made with HTML and CSS">
+    <meta property="twitter:description"
+        content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
+    <meta property="twitter:image" content="">
+
 </head>
 
 <body>
@@ -79,9 +100,12 @@
     <section id="contact">
         <h1>Some of my profile links...</h1>
         <div class="contact-link">
-            <a class="profile-link" id="profile-link" href="https://github.com/webtechdude"  target="_blank"><i class="lni lni-github-original"></i>Github</a>
-            <a class="profile-link" href="https://www.youtube.com/channel/UCZMViE8E_BYPps-mFDgzpJg" target="_blank"><i class="lni lni-youtube"></i>YouTube</a>
-            <a class="profile-link" href="https://www.reddit.com/user/fntaki" target="_blank"><i class="lni lni-reddit"></i>Reddit</a>
+            <a class="profile-link" id="profile-link" href="https://github.com/webtechdude" target="_blank"><i
+                    class="lni lni-github-original"></i>Github</a>
+            <a class="profile-link" href="https://www.youtube.com/channel/UCZMViE8E_BYPps-mFDgzpJg" target="_blank"><i
+                    class="lni lni-youtube"></i>YouTube</a>
+            <a class="profile-link" href="https://www.reddit.com/user/fntaki" target="_blank"><i
+                    class="lni lni-reddit"></i>Reddit</a>
         </div>
     </section>
     <footer>
