changes front pic

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="welcome-section">
         <div class="welcome_image">
             <img oncontextmenu="return false;" draggable="false"
-                src="https://i.ibb.co/xfMKsC6/backlit-structure-designify.png" alt="">
+                src="profile-pic.png" alt="">
         </div>
         <div class="titles">
             <div class="welcome_title">
