--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                     CSS-Technical Documentation Page
                 </p>
             </a>
+            <a href="https://github.com/webtechdude/Batch-221_2--4090975--Fatin-Noor-Taki-Assignment-8-FitX" target="_blank" class="project-tile">
+                <img class="project-image" src="https://i.ibb.co/vV91SPH/Screen-Shot-2022-04-27-at-22-45-44.png"
+                    alt="project" />
+                <p class="project-title">
+                    CSS-Technical Documentation Page
+                </p>
+            </a>
         </div>
     </section>
     <section id="contact">
