--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
     <meta property="twitter:description"
         content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
     <meta property="twitter:image" content="">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
 <body>
+    <div class="js"></div>
+    <div id="preloader"></div>
     <nav id="navbar">
-        <img style="cursor: pointer;" onclick="scrollPlz()" id="logo" draggable="false" src="https://i.ibb.co/gvH2XGq/logo.png" alt="">
+        <img style="cursor: pointer;" onclick="scrollPlz()" id="logo" draggable="false"
+            src="https://i.ibb.co/gvH2XGq/logo.png" alt="">
         <div class="navbar">
             <li><a href="#welcome-section">About</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -55,14 +59,13 @@
     </nav>
     <section id="welcome-section">
         <div class="welcome_image">
-            <img oncontextmenu="return false;" draggable="false"
-                src="profile-pic.png" alt="">
+            <img oncontextmenu="return false;" draggable="false" src="profile-pic.jpg" alt="">
         </div>
         <div class="titles">
             <div class="welcome_title">
                 <h1>I am Taki</h1>
             </div>
-            <div class="welcome_prof">a learning web developer</div>
+            <div class="welcome_prof">a learning/beginner web developer</div>
         </div>
     </section>
     <section id="projects">
@@ -96,11 +99,12 @@
                     CSS-Technical Documentation Page
                 </p>
             </a>
-            <a href="https://github.com/webtechdude/Batch-221_2--4090975--Fatin-Noor-Taki-Assignment-8-FitX" target="_blank" class="project-tile">
+            <a href="https://github.com/webtechdude/Batch-221_2--4090975--Fatin-Noor-Taki-Assignment-8-FitX"
+                target="_blank" class="project-tile">
                 <img class="project-image" src="https://i.ibb.co/vV91SPH/Screen-Shot-2022-04-27-at-22-45-44.png"
                     alt="project" />
                 <p class="project-title">
-                    CSS-Technical Documentation Page
+                    FitX - A simple gym site
                 </p>
             </a>
         </div>
@@ -109,17 +113,18 @@
         <h1>Some of my profile links...</h1>
         <div class="contact-link">
             <a class="profile-link" id="profile-link" href="https://github.com/webtechdude" target="_blank"><i
-                    class="lni lni-github-original"></i>Github</a>
+                    class="lni lni-github-original"></i></a>
             <a class="profile-link" href="https://www.youtube.com/channel/UCZMViE8E_BYPps-mFDgzpJg" target="_blank"><i
-                    class="lni lni-youtube"></i>YouTube</a>
+                    class="lni lni-youtube"></i></a>
             <a class="profile-link" href="https://www.reddit.com/user/fntaki" target="_blank"><i
-                    class="lni lni-reddit"></i>Reddit</a>
+                    class="lni lni-reddit"></i></a>
         </div>
     </section>
     <footer>
         <p>
             &copy; Created for
             <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>
+            | <i class="lni lni-code"></i> by <a href="https://social-taki.netlify.app" target="_blank">WebTechDude</a>
         </p>
     </footer>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="lni lni-chevron-up"></i></button>
@@ -144,11 +149,22 @@
     }
     function scrollPlz() {
         window.scroll({
-            top: 0, 
-            left: 0, 
-            behavior: 'smooth' 
-           });
+            top: 0,
+            left: 0,
+            behavior: 'smooth'
+        });
     }
+    jQuery(document).ready(function ($) {
+
+        $(window).load(function () {
+            $('#preloader').fadeOut('slow', function () { $(this).remove(); });
+        });
+
+    });
 </script>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
 
 </html
