added more social links

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                     FitX - A simple gym site
                 </p>
             </a>
+            <a href="https://github.com/webtechdude/Fatin-Noor-Taki---Profile-Links" target="_blank"
+                class="project-tile">
+                <img class="project-image"
+                    src="https://i.ibb.co/TqGGwCx/Screen-Shot-2022-05-02-at-23-48-30-fullpage.png" alt="project" />
+                <p class="project-title">
+                    A Social Media Referencing Landing Page
+                </p>
+            </a>
         </div>
     </section>
     <section id="contact">
@@ -117,6 +125,10 @@
                     class="lni lni-youtube"></i></a>
             <a class="profile-link" href="https://www.reddit.com/user/fntaki" target="_blank"><i
                     class="lni lni-reddit"></i></a>
+            <a class="profile-link" href="https://www.instagram.com/f_n_taki/" target="_blank"><i
+                    class="lni lni-instagram"></i></a>
+            <a class="profile-link" href="https://www.linkedin.com/in/webtechdude/" target="_blank"><i
+                    class="lni lni-linkedin"></i></a>
         </div>
     </section>
     <footer>
