--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preload" href="https://i.ibb.co/gvH2XGq/logo.png" as="image">
 
     <!-- Primary Meta Tags -->
-    <title>Simple Portfolio - Made with HTML and CSS</title>
+    <title>Fatin Noor Taki - A Simple Portfolio</title>
     <meta name="title" content="Simple Portfolio - Made with HTML and CSS">
     <meta name="description" content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
 
