added 1 more project

--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
                 </p>
                 
             </a>
+            <a href="https://codepen.io/Web-Tech-DUDE/pen/yLvpemd" target="_blank"
+                class="project-tile">
+                <img class="project-image"
+                    src="https://shots.codepen.io/Web-Tech-DUDE/pen/yLvpemd-320.jpg" alt="project" />
+                <p class="project-title">
+                    A Social Media Referencing Landing Page
+                </p>
+                
+            </a>
+
         </div>
     </section>
     <section id="contact">
