--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <img class="project-image"
                     src="https://shots.codepen.io/Web-Tech-DUDE/pen/yLvpemd-320.jpg" alt="project" />
                 <p class="project-title">
-                    A Social Media Referencing Landing Page
+                    Simple JavaScript Calculator
                 </p>
                 
             </a>
@@ -140,6 +140,8 @@
                     class="lni lni-instagram"></i></a>
             <a class="profile-link" href="https://www.linkedin.com/in/webtechdude/" target="_blank"><i
                     class="lni lni-linkedin"></i></a>
+            <a class="profile-link" href="https://discord.gg/DEC9FmyJFZ" target="_blank"><i
+                    class="lni lni-discord"></i></a>
         </div>
     </section>
     <footer>
@@ -150,32 +152,8 @@
         </p>
     </footer>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="lni lni-chevron-up"></i></button>
-
+<script src="js/index.js"
 </body>
-<script>
-    var mybutton = document.getElementById("myBtn");
 
-    window.onscroll = function () { scrollFunction() };
-
-    function scrollFunction() {
-        if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
-            mybutton.style.display = "block";
-        } else {
-            mybutton.style.display = "none";
-        }
-    }
-
-    function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-    }
-    function scrollPlz() {
-        window.scroll({
-            top: 0,
-            left: 0,
-            behavior: 'smooth'
-        });
-    }
-</script>
 
 </html
