--- a/index.html
+++ b/index.html
@@ -113,16 +113,15 @@
                 <p class="project-title">
                     A Social Media Referencing Landing Page
                 </p>
-                
+
             </a>
-            <a href="https://codepen.io/Web-Tech-DUDE/pen/yLvpemd" target="_blank"
-                class="project-tile">
-                <img class="project-image"
-                    src="https://shots.codepen.io/Web-Tech-DUDE/pen/yLvpemd-320.jpg" alt="project" />
+            <a href="https://codepen.io/Web-Tech-DUDE/pen/yLvpemd" target="_blank" class="project-tile">
+                <img class="project-image" src="https://shots.codepen.io/Web-Tech-DUDE/pen/yLvpemd-320.jpg"
+                    alt="project" />
                 <p class="project-title">
                     Simple JavaScript Calculator
                 </p>
-                
+
             </a>
 
         </div>
@@ -152,7 +151,8 @@
         </p>
     </footer>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="lni lni-chevron-up"></i></button>
-<script src="js/index.js"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 
