--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </nav>
     <section id="welcome-section">
         <div class="welcome_image">
-            <img oncontextmenu="return false;" draggable="false" src="profile-pic.jpg" alt="">
+            <img id="myImg" onmouseover="rotateGallery()" onmousedown="rotateGallery()" oncontextmenu="return false;"
+                draggable="false" src="img/1.jpg" alt="">
         </div>
         <div class="titles">
             <div class="welcome_title">
@@ -123,6 +124,15 @@
                 </p>
 
             </a>
+            <a href="https://webtechdude.pages.dev" target="_blank" class="project-tile">
+                <img class="project-image" src="https://webtechdude.pages.dev/img/webtechdude.pages.dev.png"
+                    alt="project" />
+                <p class="project-title">
+                    My Static Site for my YouTube Channel
+                </p>
+
+            </a>
+
 
         </div>
     </section>
@@ -145,13 +155,12 @@
     </section>
     <footer>
         <p>
-            &copy; Created for
-            <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a>
-            | <i class="lni lni-code"></i> by <a href="https://social-taki.netlify.app" target="_blank">WebTechDude</a>
+            <i class="lni lni-code"></i> by <a href="https://social-taki.netlify.app" target="_blank">WebTechDude</a>
         </p>
     </footer>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="lni lni-chevron-up"></i></button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
