--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 </p>
 
             </a>
-            <a href="https://codepen.io/Web-Tech-DUDE/pen/yLvpemd" target="_blank" class="project-tile">
-                <img class="project-image" src="https://shots.codepen.io/Web-Tech-DUDE/pen/yLvpemd-320.jpg"
+            <a href="https://github.com/webtechdude/JS-Calculator" target="_blank" class="project-tile">
+                <img class="project-image" src="https://i.ibb.co/5W5TgP7/Screen-Shot-2022-06-05-at-01-41-22.png"
                     alt="project" />
                 <p class="project-title">
                     Simple JavaScript Calculator
