--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <img class="project-image" src="https://webtechdude.pages.dev/img/webtechdude.pages.dev.png"
                     alt="project" />
                 <p class="project-title">
-                    My Static Site for my YouTube Channel
+                    Static Site for my YouTube Channel
                 </p>
 
             </a>
