--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-    <!-- font load end -->
+    <!-- =========== -->
     <link rel="preload" href="https://i.ibb.co/gvH2XGq/logo.png" as="image" type="image/png">
     <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css">
@@ -20,12 +20,10 @@
     <link rel="shortcut icon" href="https://i.ibb.co/0nQk7p8/favicon.png" type="image/x-icon">
     <link rel="preload" href="https://i.ibb.co/xfMKsC6/backlit-structure-designify.png" as="image">
     <link rel="preload" href="https://i.ibb.co/gvH2XGq/logo.png" as="image">
-
     <!-- Primary Meta Tags -->
     <title>Fatin Noor Taki - A Simple Portfolio</title>
     <meta name="title" content="Simple Portfolio - Made with HTML and CSS">
     <meta name="description" content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
-
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://fatinoortaki.netlify.app/">
@@ -33,7 +31,6 @@
     <meta property="og:description"
         content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
     <meta property="og:image" content="">
-
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://fatinoortaki.netlify.app/">
@@ -42,11 +39,9 @@
         content="A simple portfolio made with HTML and CSS. Made for RWD - FreeCodeCamp project.">
     <meta property="twitter:image" content="">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 </head>
 
 <body>
-
     <nav id="navbar">
         <img style="cursor: pointer;" onclick="scrollPlz()" id="logo" draggable="false"
             src="https://i.ibb.co/gvH2XGq/logo.png" alt="">
@@ -131,13 +126,21 @@
                 </p>
 
             </a>
+            <a href="https://spelaean-mixture.000webhostapp.com/" target="_blank" class="project-tile">
+                <img class="project-image" src="https://i.ibb.co/FmnXLxz/spelaean-mixture-000webhostapp-com-1.png"
+                    alt="project" />
+                <p class="project-title">
+                    PHP Site for Gym viewcase and gym management system
+                </p>
+
+            </a>
 
 
         </div>
     </section>
     <section id="contact">
         <h1>Some of my profile links...</h1>
-        <div data-scroll="" class="contact-link">
+        <div data-scroll class="contact-link">
             <a class="profile-link" id="profile-link" href="https://github.com/webtechdude" target="_blank"><i
                     class="lni lni-github-original"></i></a>
             <a class="profile-link" href="https://www.youtube.com/channel/UCZMViE8E_BYPps-mFDgzpJg" target="_blank"><i
